refactor: rename project to "toast_world" and update configurations
- Changed project name in package.json from "ToastWorld" to "toast_world".
- Updated Vite base path in vite.config.ts to root.
- Added index.html for the main application structure.
- Created postcss.config.js for Tailwind CSS integration.
- Added Tailwind CSS directives in index.css.
- Implemented the main application logic in index.tsx.
- Added Tailwind CSS configuration in tailwind.config.js.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "ToastWorld",
+  "name": "toast_world",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://choshinyoung.github.io/ToastWorld",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
